// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for goals-and-life-events 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 121849.76366547632,
  "annualSavings": [
    22572,
    1205.62999999999,
    40367.561400000006,
    44317.40967500003,
    60562.36050824006,
    62662.45499740698,
    64833.23926183667,
    67077.04560082818,
    62085.86422461223,
    64291.121336220225,
    66509.19956977294,
    68694.4109020499,
    70954.96581628399,
    83523.34208522442,
    71239.13855156931,
    70157.67774524033,
    69019.28094758144,
    67822.14884615887,
    65168.827415934706,
    65515.88384027258,
    64227.30315880303,
  ],
  "currentAge": 37,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 210000,
  "lifeExpectancy": 93,
  "portfolioAdjustments": [
    {
      "amount": 49612.5,
      "year": 2,
    },
    {
      "amount": -18000,
      "year": 5,
    },
    {
      "amount": -39362.59973403797,
      "year": 11,
    },
    {
      "amount": -40346.66472738891,
      "year": 12,
    },
    {
      "amount": -41355.33134557363,
      "year": 13,
    },
    {
      "amount": -42389.21462921297,
      "year": 14,
    },
    {
      "amount": -25000,
      "year": 24,
    },
  ],
  "postRetirementIncome": [
    0,
    0,
    0,
    0,
    0,
    0,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
    38831.72746851156,
  ],
  "retirementAge": 58,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for pr-residency-transition 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 106378.78572280148,
  "annualSavings": [
    52404.5,
    46847.62272727273,
    42994.955818181814,
    44049.88803409094,
    49528.25252701003,
    50332.79348107986,
    51027.91451495694,
    51722.96786260193,
    60916.34613571176,
    65745.56398978597,
  ],
  "currentAge": 57,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 557000,
  "lifeExpectancy": 92,
  "portfolioAdjustments": [],
  "postRetirementIncome": [
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
    8498.790240305834,
  ],
  "retirementAge": 67,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for property-and-CPF 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 126380.38370090838,
  "annualSavings": [
    125646,
    130149.75,
    134824.21124999996,
    139675.68564374998,
    144710.70381628122,
    148376.4306141974,
    153708.11884238955,
    159241.28286248588,
    164982.36849717426,
    170890.7035409836,
    177021.87667748638,
    183384.08839908108,
    189972.99256990585,
    196765.49860905466,
    203813.49489205354,
    212126.36739074969,
    221183.83552211444,
    228792.38236007636,
    236687.00195223413,
    244788.05997314997,
  ],
  "currentAge": 40,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 742000,
  "lifeExpectancy": 95,
  "portfolioAdjustments": [
    {
      "amount": 1067800,
      "year": 25,
    },
  ],
  "postRetirementIncome": [
    54709.9644311437,
    55717.71354192228,
    133953.43257606612,
    135012.19898557788,
    156785.54223239198,
    157897.9086913853,
    159038.0843118534,
    160206.76432283322,
    161404.66133408755,
    162632.50577062322,
    163891.0463180723,
    165181.0503792076,
    89300.52834627545,
    90655.8388630057,
    92045.03214265424,
    93468.95525429396,
    94928.4764437247,
    96424.48566289121,
    97957.89511253685,
    99529.63979842365,
    101140.67810145763,
    102791.99236206745,
    104484.58947919251,
    106219.50152424572,
    107997.78637042525,
    109820.52833775926,
    111688.8388542766,
    113603.85713370692,
    115566.75087012295,
    117578.71694994942,
    119640.98218177151,
    121754.8040443892,
    123921.4714535723,
    126142.30554798499,
    35088.10767706454,
  ],
  "retirementAge": 60,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;

exports[`normalized monte carlo parity snapshots > matches legacy Monte Carlo params for salary-only 1`] = `
{
  "allocationWeights": [
    0.3,
    0.1,
    0.1,
    0.3,
    0.05,
    0.05,
    0.1,
    0,
  ],
  "annualExpensesAtRetirement": 91838.77086283134,
  "annualSavings": [
    45008,
    48111.20000000002,
    51208.94600000002,
    54378.39509000002,
    57692.74542485006,
    61158.2461363753,
    64781.407648724846,
    68569.0124132407,
    72528.12607980147,
    76584.48968623538,
    80681.18472294867,
    84963.29044736213,
    89438.76185913953,
    94115.88562223503,
    99003.29366807266,
    103944.74112737871,
    109032.97650735761,
    114349.7244459077,
    119904.75002395624,
    125703.39364891253,
    131669.558022967,
    137901.94568768603,
    144411.89499258884,
    152161.2150566227,
    160866.0494822297,
    168222.90436673092,
    175905.23396924243,
    183895.31158885895,
  ],
  "currentAge": 32,
  "deterministicAccumulation": false,
  "expectedReturns": [
    0.07,
    0.07,
    0.071,
    0.03,
    0.05,
    0.03,
    0.014,
    0.03,
  ],
  "initialPortfolio": 125000,
  "lifeExpectancy": 92,
  "portfolioAdjustments": [],
  "postRetirementIncome": [
    0,
    0,
    0,
    0,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
    45997.193058704586,
  ],
  "retirementAge": 60,
  "stdDevs": [
    0.155,
    0.18,
    0.16,
    0.055,
    0.185,
    0.15,
    0.01,
    0,
  ],
  "withdrawalBasis": "expenses",
  "yearlyWeights": undefined,
}
`;
